src/test/deca/context/invalid/created/wrongTypes/affectation/wrong_type_BOOLEAN_INT.deca
// Description:
//  Assign un int to boolean
// 
// Resultats:
//    Ligne 8 : types don't match!
{
    boolean a;
    a = 6;
}